<resources>
    <string name="app_name">CooKuy Dirga</string>

    <!--    Register Activity-->
    <string name="register_title">Register</string>
    <string name="register_nama_hint">Nama</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_button">Daftar</string>

    <!--    Login Activity-->
    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Masuk</string>
</resources>
